
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_SUCCESS ;
 int exit (int ) ;
 int printf (char*) ;
 scalar_t__ strpbrk (char*,char*) ;

__attribute__((used)) static void
zbuffcheck (char * zbuf)
{
  if (strpbrk (zbuf, "\x0a\x0d"))
    {
      printf ("\n-Buffer contains invalid characters...\n");
      exit (EXIT_SUCCESS);
    }
}
